--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     </div>
   </header>
   <main>
-    <div class="gray-fw"></div>
-    <section class="max-width-wrapper gray-borders">
-      <div class="card">
-        <h2 class="indented-heading">
-          Wealth comes from operations
-        </h2>
-        <p>
-          No modern business can thrive without developing a
-          specialization in operations. Huckleberry has helped
-          dozens of companies, from Fortune 50 monoliths to
-          fast-growing Bay Area startups, achieve their goals and
-          meet their KPIs by leveraging our extensive network of
-          logistics experts.
-        </p>
-        <p>
-          Huckleberry was established in 2003 to help ambitious
-          businesses discover their true potential. If that
-          resonates, let's chat!
-        </p>
-      </div>
-    </section>
-    <div class="gray-fw bottom"></div>
+    <div class="borders-only">
+      <section class="max-width-wrapper gray-borders">
+        <div class="card">
+          <h2 class="indented-heading">
+            Wealth comes from operations
+          </h2>
+          <p>
+            No modern business can thrive without developing a
+            specialization in operations. Huckleberry has helped
+            dozens of companies, from Fortune 50 monoliths to
+            fast-growing Bay Area startups, achieve their goals and
+            meet their KPIs by leveraging our extensive network of
+            logistics experts.
+          </p>
+          <p>
+            Huckleberry was established in 2003 to help ambitious
+            businesses discover their true potential. If that
+            resonates, let's chat!
+          </p>
+        </div>
+      </section>
+    </div>
   </main>
 </body>
 
